Updated index.html with activity note

--- a/index.html
+++ b/index.html
@@ -17,3 +17,4 @@
     <h2>I am a Bachelor in Computer Science college student studying in <b>CIIT</b></h2>
     </body> 
 </html>
+<!--Updated on (date) for Git activity-->
