Added script.js, style.css. Moved yupthatsme.jpeg to photos folder in assets directory.  Modified index.html to find yupthatsme.jpeg in assets/photos directory. modified about.html to be able be modified by style.cs

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="HTMLBGColor">
+  <link href="style.css" rel="stylesheet">
           <nav style="text-align: center;">
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -7,8 +8,10 @@
     </nav>
     <body>
       <h2>Introduction of who I am:</h2>
-      <p> I am Chaz Vincent Aurin and i've been studing how to code from HTML ever since Grade 7.</p><br>
-      <p>Since then I've grown my foundation for coding and have been open for more coding projects</p>
+      <div class="fontThis">
+      <p> I am Chaz Vincent Aurin and i've been studing how to code from HTML ever since Grade 7.</p>
+      <p>Since then I've grown my foundation for coding and have been  open for more coding projects</p>
+      </div>
       <h3>My Goals in Developing my Skills in Coding</h3>
       <ul>
         <li>Being able to read and troubleshoot error codes</li>
