--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     </nav>
     <body>
     <h1>I am Chaz Vincent Aurin</h1>
-    <img src="yupthatsme.jpeg" width="500px" height="500px">
+    <img src="assets/photos/yupthatsme.jpeg" width="500px" height="500px">
     <h2>I am a Bachelor in Computer Science college student studying in <b>CIIT</b></h2>
     </body> 
 </html>
-<!--Updated on (date) for Git activity-->
