Add link to Certificates page in navigation

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <a href="contact.html">Contact</a> 
     <a href="projects.html">Projects</a>
     <a href="workwork.html">Experience</a>
+    <a href="certificates.html">Certificates</a>
   </div>
 </nav>
     <body>
