--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <a href="contact.html">Contact</a> 
     <a href="projects.html">Projects</a>
     <a href="workwork.html">Experience</a>
+    <a href="certificates.html">Certificates</a>
   </div>
 </nav>
     <body>
@@ -70,6 +71,21 @@
             Integrity with my work, punctuality to my responsibilities, and soft skills to help people.
           </li>
           <br>
+        </ul>
+      </div>
+
+            <div class="slide" style="display:none;">
+        <h2>Education:</h2>
+        <ul style="text-align: left; margin-left: 40px;">
+          <li><b>Elementary</b><br>
+            Pateros Catholic School Grade 1 - 3<br>Comembo Elementary School Grade 4 - 6</li> 
+          <br>
+          <li><b>Junior High School</b><br>
+            APEC Schools Grade 7 - 10
+          </li><br>
+          <li><b>Senior High School</b><br>
+            APEC Schools C.Raymundo 11 - 12
+          </li>
         </ul>
       </div>
           <div class="fixed-buttons">
