--- a/about.html
+++ b/about.html
@@ -16,7 +16,6 @@
     <a href="certificates.html">Certificates</a>
   </div>
 </nav>
-    <body>
       <head>
     <h1 style="text-align: center;">More Information About Me!</h1>
   </head>
@@ -74,20 +73,51 @@
         </ul>
       </div>
 
-            <div class="slide" style="display:none;">
-        <h2>Education:</h2>
-        <ul style="text-align: left; margin-left: 40px;">
-          <li><b>Elementary</b><br>
-            Pateros Catholic School Grade 1 - 3<br>Comembo Elementary School Grade 4 - 6</li> 
-          <br>
-          <li><b>Junior High School</b><br>
-            APEC Schools Grade 7 - 10
-          </li><br>
-          <li><b>Senior High School</b><br>
-            APEC Schools C.Raymundo 11 - 12
-          </li>
-        </ul>
+<div class="slide" style="display:none;">
+  <h2>Education:</h2>
+  <ul style="text-align: left; margin-left: 40px; list-style: none; padding: 0;">
+    
+    <li style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+      <div>
+        <h2><b>Elementary</b></h2><br>
+        <p style="font-size: medium;">
+        Pateros Catholic School Grade 1 - 3<br>
+        Comembo Elementary School Grade 4 - 6
+        </p>
       </div>
+      <div>
+        <img src="assets/photos/pateros.jpeg" width="120" height="120" style="margin-left: 10px;">
+        <img src="assets/photos/Comembo.jpeg" width="120" height="120" style="margin-left: 10px;">
+      </div>
+    </li>
+
+    <li style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+      <div>
+        <b><h2>Junior High School</h2></b><br>
+        <p style="font-size: medium;">
+        APEC Schools Grade 7 - 10
+        </p>
+      </div>
+      <img src="assets/photos/APEC.png" width="120" height="120" style="margin-left: 10px;">
+    </li>
+
+    <li style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
+      <div>
+        <h2><b>Senior High School</b></h2><br>
+        <p style="font-size: medium;">
+        APEC Schools C.Raymundo 11 - 12
+        </p>
+      </div>
+      <img src="assets/photos/APEC.png" width="120" height="120" style="margin-left: 10px;">
+    </li>
+
+  </ul>
+</div>
+
+
+
+      </div>
+      
           <div class="fixed-buttons">
       <button onclick="nextSlide()">Next</button>
       <button onclick="prevSlide()">Previous</button>
