Fixed some layouts

--- a/workwork.html
+++ b/workwork.html
@@ -89,7 +89,7 @@
     <div class="slide" style="display: none;">
       <div style="display: flex; align-items: center; gap: 20px;">
         <div>
-          <h1>Worked as a Waiter for 3 months</h1>
+          <h1>Worked as a Waiter in Kentouka for 3 months</h1>
           <p>I worked for my godmother in a Japanese restaurant which gave me more experience and insight on what a professional workplace should be like and how I can apply it to my studies</p>
         </div>
 
