--- a/certificates.html
+++ b/certificates.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
     <link href="assets/style.css" rel="stylesheet">
 
 <nav class="navbar">
